--- a/index.html
+++ b/index.html
@@ -8,8 +8,6 @@
 		<link rel="stylesheet" href="css/fonts.css" />
 		<link rel="stylesheet" href="css/style.css" />
 		<link rel="stylesheet" href="css/footer.css">
-		<script defer src="js/jquery.js"></script>
-		<!-- <script defer src="js/list.js"></script> -->
 		<title>Floressence</title>
 	</head>
 
@@ -23,14 +21,14 @@
 					<div>
 						<h3>Floressence</h3>
 						<ul class="contacts">
-							<li>ZA La Festre Sud</li>
-							<li>Route de Grasse</li>
-							<li>06530 St Cézaire sur Siagne</li>
+							<li>Регион  |</li>
+							<li>Название улицы  |</li>
+							<li>Почтовый индекс и город  |</li>
 							<li class="nostripe">Страна</li>
 						</ul>
 						<ul class="contacts">
-							<li>Tél: +7 (495) 123-45-67</li>
-							<li class="nostripe">Fax: +7 (495) 765-43-21</li>
+							<li>Тел: +7 (495) 123-45-67  |</li>
+							<li>Факс: +7 (495) 765-43-21</li>
 						</ul>
 					</div>
 				</div>
