--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 		<link rel="stylesheet" href="css/default.css" />
 		<link rel="stylesheet" href="css/fonts.css" />
 		<link rel="stylesheet" href="css/style.css" />
+		<!-- <link rel="stylesheet" href="css/header.css" /> -->
 		<link rel="stylesheet" href="css/footer.css">
 		<title>Floressence</title>
 	</head>
@@ -14,6 +15,19 @@
 	<body onload="resize();" onresize="resize();">
 		<div class="container">
 			<header>
+				<div class="header_wrap">
+					<a class="logo" href="index.html" title="Главная страница"></a>
+					<ul class="language">
+						<li><a href="#" title="English"></a></li>
+						<li><a href="#" title="French"></a></li>
+					</ul>
+					<ul class="mob_menu">
+						<li></li>
+						<li></li>
+						<li></li>
+						<li></li>
+					</ul>
+				</div>
 			</header>
 
 			<footer>
@@ -21,14 +35,15 @@
 					<div>
 						<h3>Floressence</h3>
 						<ul class="contacts">
-							<li>Регион  |</li>
-							<li>Название улицы  |</li>
-							<li>Почтовый индекс и город  |</li>
-							<li class="nostripe">Страна</li>
+							<li>Россия</li>
+							<li>125040 Москва</li>
+							<li>ул. Скаковая</li>
+							<li>д. 17, стр.1, оф. 1107</li>
 						</ul>
 						<ul class="contacts">
-							<li>Тел: +7 (495) 123-45-67  |</li>
-							<li>Факс: +7 (495) 765-43-21</li>
+							<li><a href="tel:+74959452254" title="+7 (495) 945-22-54 ">Тел: +7 (495) 945-22-54</a></li>
+							<li><a href="tel:+7495945484" title="+7 (495) 765-43-21">Тел/Факс: +7 (495) 765-43-21</a></li>
+							<li><a href="mailto:tania@floressence.ru" title="Написать">e-mail: tania@floressence.ru</a></li>
 						</ul>
 					</div>
 				</div>
