--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
 					<div>
 						<h3>Floressence</h3>
 						<ul class="contacts">
-							<li>Россия</li>
-							<li>125040 Москва</li>
-							<li>ул. Скаковая</li>
+							<li>Россия,</li>
+							<li>125040 Москва,</li>
+							<li>ул. Скаковая,</li>
 							<li>д. 17, стр.1, оф. 1107</li>
 						</ul>
 						<ul class="contacts">
