--- a/index.html
+++ b/index.html
@@ -35,14 +35,15 @@
 						<h3>Floressence</h3>
 						<ul class="contacts">
 							<li>Россия,</li>
-							<li>125040 Москва,</li>
+							<li>125040,</li>
+							<li>Москва,</li>
 							<li>ул. Скаковая,</li>
-							<li>д. 17, стр.1, оф. 1107</li>
+							<li>д. 17,</li>&nbsp;<li>стр. 1,</li>&nbsp;<li>оф. 1107</li>
 						</ul>
 						<ul class="contacts">
-							<li><a href="tel:+74959452254" title="+7 (495) 945-22-54 ">Тел: +7 (495) 945-22-54</a></li>
-							<li><a href="tel:+7495945484" title="+7 (495) 765-43-21">Тел/Факс: +7 (495) 765-43-21</a></li>
-							<li><a href="mailto:tania@floressence.ru" title="Написать">e-mail: tania@floressence.ru</a></li>
+							<li>Тел:<a href="tel:+74959452254" title="+7 (495) 945-22-54 "> +7 (495) 945-22-54</a></li>
+							<li>Тел/Факс:<a href="tel:+7495945484" title="+7 (495) 765-43-21"> +7 (495) 765-43-21</a></li>
+							<li>e-mail:<a href="mailto:tania@floressence.ru" title="Написать"> tania@floressence.ru</a></li>
 						</ul>
 					</div>
 				</div>
