--- a/index.html
+++ b/index.html
@@ -7,7 +7,11 @@
 		<link rel="stylesheet" href="css/default.css" />
 		<link rel="stylesheet" href="css/fonts.css" />
 		<link rel="stylesheet" href="css/style.css" />
-		<link rel="stylesheet" href="css/footer.css">
+		<link rel="stylesheet" href="css/header.css" />
+		<link rel="stylesheet" href="css/nav.css" />
+		<link rel="stylesheet" href="css/footer.css" />
+		<script defer src="js/jquery.js"></script>
+		<script defer src="js/common.js"></script>
 		<title>Floressence</title>
 	</head>
 
@@ -15,12 +19,12 @@
 		<div class="container">
 			<header>
 				<div class="header_wrap">
-					<a class="logo" href="index.html" title="Главная страница"></a>
-					<ul class="language">
+					<a class="logo" href="index.html" title="Слоган компании?"></a>
+					<!-- <ul class="language">
 						<li><a href="#" title="English"></a></li>
 						<li><a href="#" title="French"></a></li>
-					</ul>
-					<ul class="mob_menu">
+					</ul> -->
+					<ul class="mob_menu opened">
 						<li></li>
 						<li></li>
 						<li></li>
@@ -28,6 +32,20 @@
 					</ul>
 				</div>
 			</header>
+
+			<!-- <nav>
+				<ul>
+					<li><a href="#" title="Главная">Главная</a></li>
+					<li><a href="#" title="Продукция">Продукция</a></li>
+					<li><a href="#" title="О компании">О компании</a></li>
+					<li><a href="#" title="Качество">Качество</a></li>
+					<li><a href="#" title="Разработки">Разработки</a></li>
+				</ul>
+			</nav> -->
+
+			<div class="telo">
+				<div class="down_level"></div>
+			</div>
 
 			<footer>
 				<div class="footer_wrapper">
