--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 		<link rel="stylesheet" href="css/fonts.css" />
 		<link rel="stylesheet" href="css/style.css" />
 		<link rel="stylesheet" href="css/header.css" />
-		<!-- <link rel="stylesheet" href="css/nav.css" /> -->
+		<link rel="stylesheet" href="css/nav.css" />
 		<link rel="stylesheet" href="css/footer.css" />
 		<script defer src="js/jquery.js"></script>
 		<script defer src="js/common.js"></script>
@@ -19,12 +19,13 @@
 		<div class="container">
 			<header>
 				<div class="header_wrap">
-					<a class="logo" href="index.html" title="Слоган компании?"></a>
-					<!-- <ul class="language">
-						<li><a href="#" title="English"></a></li>
-						<li><a href="#" title="French"></a></li>
-					</ul> -->
-					<ul class="mob_menu opened">
+					<a class="logo" href="https://www.floressence.fr" title="Слоган компании?"></a>
+					<ul class="language">
+						<li class="lang_actual rus"><a href="#" title="Русский"></a></li>
+						<li class="eng"><a href="https://www.floressence.fr/en/" title="English"></a></li>
+						<li class="fr"><a href="https://www.floressence.fr/fr/" title="French"></a></li>
+					</ul>
+					<ul class="mob_menu">
 						<li></li>
 						<li></li>
 						<li></li>
@@ -33,9 +34,9 @@
 				</div>
 			</header>
 
-			<!-- <nav>
+			<!-- <nav class="desktop mob">
 				<ul>
-					<li><a href="#" title="Главная">Главная</a></li>
+					<li><a class="menu_actual" href="#" title="Главная">Главная</a></li>
 					<li><a href="#" title="Продукция">Продукция</a></li>
 					<li><a href="#" title="О компании">О компании</a></li>
 					<li><a href="#" title="Качество">Качество</a></li>
@@ -44,10 +45,10 @@
 			</nav> -->
 
 			<div class="telo">
-				<div class="down_level"></div>
 			</div>
 
 			<footer>
+				<div class="down_level"></div>
 				<div class="footer_wrapper">
 					<div>
 						<h3>Floressence</h3>
