--- a/index.html
+++ b/index.html
@@ -16,8 +16,7 @@
 	</head>
 
 	<body onload="resize();" onresize="resize();">
-		<div class="container">
-			<nav class="desktop mob">
+			<nav class="desktop">
 				<ul>
 					<li><a class="menu_actual" href="#" title="Главная">Главная</a></li>
 					<li><a href="#" title="Продукция">Продукция</a></li>
@@ -26,7 +25,7 @@
 					<li><a href="#" title="Разработки">Разработки</a></li>
 				</ul>
 			</nav>
-
+			<div class="container">
 			<header>
 				<div class="header_wrap">
 					<a class="logo" href="https://www.floressence.fr" title="Слоган компании?"></a>
