mob menu languages

--- a/index.html
+++ b/index.html
@@ -23,6 +23,12 @@
 					<li><a href="#" title="О компании">О компании</a></li>
 					<li><a href="#" title="Качество">Качество</a></li>
 					<li><a href="#" title="Разработки">Разработки</a></li>
+					<li class="lang_mob">
+						<ul class="lang_choice">
+							<li class="eng"><a href="https://www.floressence.fr/en/" title="English"></a></li>
+							<li class="fr"><a href="https://www.floressence.fr/fr/" title="French"></a></li>
+					</ul>
+					</li>
 				</ul>
 			</nav>
 			<div class="container">
