--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
 	</head>
 
 	<body onload="resize();" onresize="resize();">
-			<nav class="desktop">
+			<nav>
 				<ul>
-					<li><a class="menu_actual" href="#" title="Главная">Главная</a></li>
+					<li><a class="menu_actual" href="#" title="О компании">О компании</a></li>
 					<li><a href="#" title="Продукция">Продукция</a></li>
-					<li><a href="#" title="О компании">О компании</a></li>
 					<li><a href="#" title="Качество">Качество</a></li>
 					<li><a href="#" title="Разработки">Разработки</a></li>
+					<li><a href="#" title="Контакты">Контакты</a></li>
 					<li class="lang_mob">
 						<ul class="lang_choice">
 							<li class="eng"><a href="https://www.floressence.fr/en/" title="English"></a></li>
@@ -34,7 +34,7 @@
 			<div class="container">
 			<header>
 				<div class="header_wrap">
-					<a class="logo" href="https://www.floressence.fr" title="Слоган компании?"></a>
+					<a class="logo" href="#" title="Слоган компании?"></a>
 					<div class="lang">
 						<span></span>
 					</div>
