--- a/index.html
+++ b/index.html
@@ -22,22 +22,12 @@
 					<li><a href="#" title="Продукция">Продукция</a></li>
 					<li><a href="#" title="Качество">Качество</a></li>
 					<li><a href="#" title="Разработки">Разработки</a></li>
-					<li><a href="#" title="Контакты">Контакты</a></li>
-					<li class="lang_mob">
-						<ul class="lang_choice">
-							<li class="eng"><a href="https://www.floressence.fr/en/" title="English"></a></li>
-							<li class="fr"><a href="https://www.floressence.fr/fr/" title="French"></a></li>
-					</ul>
-					</li>
 				</ul>
 			</nav>
 			<div class="container">
 			<header>
 				<div class="header_wrap">
 					<a class="logo" href="#" title="Слоган компании?"></a>
-					<div class="lang">
-						<span></span>
-					</div>
 					<ul class="lang_choice">
 						<li class="eng"><a href="https://www.floressence.fr/en/" title="English"></a></li>
 						<li class="fr"><a href="https://www.floressence.fr/fr/" title="French"></a></li>
@@ -60,13 +50,10 @@
 				<div class="footer_wrapper">
 					<div>
 						<h3>Floressence</h3>
-						<ul class="contacts">
-							<li>Россия,</li>
-							<li>125040,</li>
-							<li>Москва,</li>
-							<li>ул. Скаковая,</li>
-							<li>д. 17,</li>&nbsp;<li>стр. 1,</li>&nbsp;<li>оф. 1107</li>
-						</ul>
+						<p class="contacts">
+							Россия, 125040, Москва, ул. Скаковая,
+							д.&nbsp;17,&nbsp;стр.&nbsp;1,&nbsp;оф.&nbsp;1107
+						</p>
 						<ul class="contacts">
 							<li>Тел:<a href="tel:+74959452254" title="+7 (495) 945-22-54"> +7 (495) 945-22-54</a></li>
 							<li>Тел/Факс:<a href="tel:+74959455484" title="+7 (495) 945-54-84"> +7 (495) 945-54-84</a></li>
