--- a/index.html
+++ b/index.html
@@ -16,15 +16,21 @@
 	</head>
 
 	<body onload="resize();" onresize="resize();">
+		<div class="container">
 			<nav>
 				<ul>
-					<li><a class="menu_actual" href="#" title="О компании">О компании</a></li>
+					<li><a class="selected" href="#" title="О компании">О компании</a></li>
 					<li><a href="#" title="Продукция">Продукция</a></li>
 					<li><a href="#" title="Качество">Качество</a></li>
 					<li><a href="#" title="Разработки">Разработки</a></li>
+					<li class="lang_mob">
+						<ul>
+							<li class="eng"><a href="https://www.floressence.fr/en/" title="English"></a></li>
+							<li class="fr"><a href="https://www.floressence.fr/fr/" title="French"></a></li>
+						</ul>
+					</li>
 				</ul>
 			</nav>
-			<div class="container">
 			<header>
 				<div class="header_wrap">
 					<a class="logo" href="#" title="Слоган компании?"></a>
