--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 		<link rel="stylesheet" href="css/style.css" />
 		<link rel="stylesheet" href="css/nav.css" />
 		<link rel="stylesheet" href="css/header.css" />
+		<link rel="stylesheet" href="css/content.css" />
 		<link rel="stylesheet" href="css/footer.css" />
 		<script defer src="js/jquery.js"></script>
 		<script defer src="js/common.js"></script>
@@ -19,7 +20,7 @@
 		<div class="container">
 			<nav>
 				<ul>
-					<li><a class="selected" href="#" title="О компании">О компании</a></li>
+					<li><span class="selected">О компании</span></li>
 					<li><a href="#" title="Продукция">Продукция</a></li>
 					<li><a href="#" title="Качество">Качество</a></li>
 					<li><a href="#" title="Разработки">Разработки</a></li>
@@ -48,8 +49,78 @@
 				</div>
 			</header>
 
-			<div class="telo">
+			<div class="content">
+				<div class="prod_types">
+					<ul>
+						<li>
+							<a class="switch_parfum" href="#" title="">
+								<span>Парфюм</span>
+								<img src="./img/parfum.jpg" alt="Парфюмерия"/>
+							</a>
+						</li>
+						<li>
+							<a href="#" title="">
+								<span>Косметика</span>
+								<img src="./img/cosmetique.jpg" alt="Косметика"/>
+							</a>
+						</li>
+						<li>
+							<a href="#" title="">
+								<span>Гигиена</span>
+								<img src="./img/hygiene.jpg" alt="Гигиена"/>
+							</a>
+						</li>
+						<li>
+							<a href="#" title="">
+								<span>Дом</span>
+								<img src="./img/habitat.jpg" alt="Бытовая химия"/>
+							</a>
+						</li>
+					</ul>
+				</div>
 			</div>
+
+			<!-- МОДАЛЬНЫЕ ОКНА -->
+
+			<div class="modal_prod_types" id="parfum">
+				<div class="modal_wrap">
+					<img src="./img/parfum.jpg" alt="Парфюмерия"/>
+					<div>
+						<p>Духи, символ богов в античности, являются неотъемлемым
+							элементом соблазнения. Давно зарезервированный для элиты,
+							он демократизировался в девятнадцатом веке, чтобы сегодня
+							стать ежедневной лаской. Профессионалы, имеющие опыт работы
+							с современными техниками оформления, наши парфюмеры
+							разрабатывают оригинальные композиции для алкогольной
+							парфюмерии. Наши творческие коллективы предвосхищают
+							тенденции рынка и опираются на особые потребительские
+							ценности для разработки композиций, которые оставят след.
+							«Зеленое» движение также лежит в основе наших проблем.
+							В этом контексте наши парфюмеры изучают и разрабатывают
+							ароматы, которые соответствуют требованиям 100% натуральности. </p>
+							<p>Духи, символ богов в античности, являются неотъемлемым
+								элементом соблазнения. Давно зарезервированный для элиты,
+								он демократизировался в девятнадцатом веке, чтобы сегодня
+								стать ежедневной лаской. Профессионалы, имеющие опыт работы
+								с современными техниками оформления, наши парфюмеры
+								разрабатывают оригинальные композиции для алкогольной
+								парфюмерии. Наши творческие коллективы предвосхищают
+								тенденции рынка и опираются на особые потребительские
+								ценности для разработки композиций, которые оставят след.
+								 </p>
+
+						<ul>
+							<li>женская парфюмерия</li>
+							<li>мужская парфюмерия</li>
+							<li>детская парфюмерия</li>
+							<li>этнические духи</li>
+							<li>натуральные духи</li>
+						</ul>
+					</div>
+				</div>
+			</div>
+
+			<!-- МОДАЛЬНЫЕ ОКНА -->
 
 			<footer>
 				<div class="down_level"></div>
