no modal, flags

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 				<div class="prod_types">
 					<ul>
 						<li>
-							<a class="switch_parfum" href="#" title="">
+							<a href="#" title="">
 								<span>Парфюм</span>
 								<img src="./img/parfum.jpg" alt="Парфюмерия"/>
 							</a>
@@ -79,48 +79,6 @@
 					</ul>
 				</div>
 			</div>
-
-			<!-- МОДАЛЬНЫЕ ОКНА -->
-
-			<div class="modal_prod_types" id="parfum">
-				<div class="modal_wrap">
-					<img src="./img/parfum.jpg" alt="Парфюмерия"/>
-					<div>
-						<p>Духи, символ богов в античности, являются неотъемлемым
-							элементом соблазнения. Давно зарезервированный для элиты,
-							он демократизировался в девятнадцатом веке, чтобы сегодня
-							стать ежедневной лаской. Профессионалы, имеющие опыт работы
-							с современными техниками оформления, наши парфюмеры
-							разрабатывают оригинальные композиции для алкогольной
-							парфюмерии. Наши творческие коллективы предвосхищают
-							тенденции рынка и опираются на особые потребительские
-							ценности для разработки композиций, которые оставят след.
-							«Зеленое» движение также лежит в основе наших проблем.
-							В этом контексте наши парфюмеры изучают и разрабатывают
-							ароматы, которые соответствуют требованиям 100% натуральности. </p>
-							<p>Духи, символ богов в античности, являются неотъемлемым
-								элементом соблазнения. Давно зарезервированный для элиты,
-								он демократизировался в девятнадцатом веке, чтобы сегодня
-								стать ежедневной лаской. Профессионалы, имеющие опыт работы
-								с современными техниками оформления, наши парфюмеры
-								разрабатывают оригинальные композиции для алкогольной
-								парфюмерии. Наши творческие коллективы предвосхищают
-								тенденции рынка и опираются на особые потребительские
-								ценности для разработки композиций, которые оставят след.
-								 </p>
-
-						<ul>
-							<li>женская парфюмерия</li>
-							<li>мужская парфюмерия</li>
-							<li>детская парфюмерия</li>
-							<li>этнические духи</li>
-							<li>натуральные духи</li>
-						</ul>
-					</div>
-				</div>
-			</div>
-
-			<!-- МОДАЛЬНЫЕ ОКНА -->
 
 			<footer>
 				<div class="down_level"></div>
