--- a/index.html
+++ b/index.html
@@ -50,6 +50,12 @@
 			</header>
 
 			<div class="content">
+				<!-- <div class="video">
+					<video>
+						<source src="./img/lotus.mp4" type="video/mp4">
+						</video>
+				</div> -->
+
 				<div class="prod_types">
 					<ul>
 						<li>
@@ -78,27 +84,70 @@
 						</li>
 					</ul>
 				</div>
-			</div>
 
-			<footer>
-				<div class="down_level"></div>
-				<div class="footer_wrapper">
-					<div>
-						<h3>Floressence</h3>
-						<p class="contacts">
-							Россия, 125040, Москва, ул. Скаковая,
-							д.&nbsp;17,&nbsp;стр.&nbsp;1,&nbsp;оф.&nbsp;1107
-						</p>
-						<ul class="contacts">
-							<li>Тел:<a href="tel:+74959452254" title="+7 (495) 945-22-54"> +7 (495) 945-22-54</a></li>
-							<li>Тел/Факс:<a href="tel:+74959455484" title="+7 (495) 945-54-84"> +7 (495) 945-54-84</a></li>
-							<li>e-mail:<a href="mailto:tania@floressence.ru" title="Написать"> tania@floressence.ru</a></li>
-						</ul>
+				<div class="preview expertise">
+					<div class="preview_wrap">
+							<div>
+								<h2>Признанная техника, связанная с качеством материалов</h2>
+								<p>Компания опирается на опыт технического и креативного
+									развития, особенно в области натуральности, благодаря
+									нашим 100%-ным составам NAT и составу нераздражающих
+									парфюмерных композиций LIGHT 26, таким образом избегая
+									для потребителей маркировку аллергенных ингредиентов.</p>
+								<p><a href="#" title="Наш опыт">Наш опыт ></a></p>
+							</div>
 					</div>
 				</div>
-				<div class="copyright">
-					<p>2019 &copy; FLORESSENCE. Все права защищены.
-					</p>
+				<div class="preview production">
+					<div class="preview_wrap">
+							<div>
+								<h2>Техника, эффективность, производительность</h2>
+								<p>Новое поколение оборудования с высокоточными роботами
+									позволяет разрабатывать и производить ароматизаторы,
+									адаптированные к вашим ожиданиям, от килограмма до
+									нескольких тонн. Качество нашей продукции соответствует
+									строгому процессу отслеживания.</p>
+								<p><a href="#" title="Производство">Производство ></a></p>
+							</div>
+					</div>
+				</div>
+				<div class="text">
+					<div class="text_container">
+						<p>Творчество и компетентность наших команд находятся на службе
+							у носа наших клиентов. Около пятидесяти профессионалов работают над
+							проектами парфюмерных композиций
+							для анализа, разработки и доставки оригинальных ароматов по всему
+							миру.</p>
+					</div>
+				</div>
+			</div>
+
+
+			<footer>
+				<div>
+					<div class="down_level"></div>
+				</div>
+				<div>
+					<div class="footer_wrapper">
+						<div>
+							<h3>Floressence</h3>
+							<p class="contacts">
+								Россия, 125040, Москва, ул. Скаковая,
+								д.&nbsp;17,&nbsp;стр.&nbsp;1,&nbsp;оф.&nbsp;1107
+							</p>
+							<ul class="contacts">
+								<li>Тел:<a href="tel:+74959452254" title="+7 (495) 945-22-54"> +7 (495) 945-22-54</a></li>
+								<li>Тел/Факс:<a href="tel:+74959455484" title="+7 (495) 945-54-84"> +7 (495) 945-54-84</a></li>
+								<li>e-mail:<a href="mailto:tania@floressence.ru" title="Написать"> tania@floressence.ru</a></li>
+							</ul>
+						</div>
+					</div>
+				</div>
+				<div>
+					<div class="copyright">
+						<p>2019 &copy; FLORESSENCE. Все права защищены.
+						</p>
+					</div>
 				</div>
 			</footer>
 		</div>
