--- a/index.html
+++ b/index.html
@@ -20,16 +20,16 @@
 		<div class="container">
 			<nav>
 				<ul>
-					<li><span class="selected">О компании</span></li>
-					<li><a href="#" title="Продукция">Продукция</a></li>
-					<li><a href="#" title="Качество">Качество</a></li>
-					<li><a href="#" title="Разработки">Разработки</a></li>
 					<li class="lang_mob">
 						<ul>
 							<li class="eng"><a href="https://www.floressence.fr/en/" title="English"></a></li>
 							<li class="fr"><a href="https://www.floressence.fr/fr/" title="French"></a></li>
 						</ul>
 					</li>
+					<li><span class="selected">О компании</span></li>
+					<li><a href="#" title="Продукция">Продукция</a></li>
+					<li><a href="#" title="Качество">Качество</a></li>
+					<li><a href="#" title="Разработки">Разработки</a></li>
 				</ul>
 			</nav>
 			<header>
@@ -50,11 +50,20 @@
 			</header>
 
 			<div class="content">
-				<!-- <div class="video">
-					<video>
-						<source src="./img/lotus.mp4" type="video/mp4">
+				<div class="video">
+					<video muted="muted" control="true" loop="loop" autoplay="autoplay" playsinline >
+						<source src="https://www.floressence.fr/images/flo/Lotus.mp4" type="video/mp4" />
 						</video>
-				</div> -->
+				<div class="video_cover">
+					<div>
+						<p>В течение более 30 лет Floressence специализируется
+							в создании ароматических композиций для промышленности:
+							изделия для парфюмерии, красоты и функциональные
+							ароматизаторы.</p>
+					</div>
+				</div>
+
+				</div>
 
 				<div class="prod_types">
 					<ul>
@@ -114,7 +123,7 @@
 				<div class="text">
 					<div class="text_container">
 						<p>Творчество и компетентность наших команд находятся на службе
-							у носа наших клиентов. Около пятидесяти профессионалов работают над
+							у обонятельных желаний наших клиентов. Около пятидесяти профессионалов работают над
 							проектами парфюмерных композиций
 							для анализа, разработки и доставки оригинальных ароматов по всему
 							миру.</p>
