--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 
 			<div class="content">
 				<div class="video">
-					<video muted="muted" control="true" loop="loop" autoplay="autoplay" playsinline >
+					<video muted="muted" controls="true" loop="loop" autoplay="autoplay" playsinline >
 						<source src="https://www.floressence.fr/images/flo/Lotus.mp4" type="video/mp4" />
 						</video>
 				<div class="video_cover">
