--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 									нашим 100%-ным составам NAT и составу нераздражающих
 									парфюмерных композиций LIGHT 26, таким образом избегая
 									для потребителей маркировку аллергенных ингредиентов.</p>
-								<p><a href="#" title="Наш опыт">Наш опыт ></a></p>
+								<p><a href="#" title="Наш опыт">Наш опыт &rsaquo;</a></p>
 							</div>
 					</div>
 				</div>
@@ -116,7 +116,7 @@
 									адаптированные к вашим ожиданиям, от килограмма до
 									нескольких тонн. Качество нашей продукции соответствует
 									строгому процессу отслеживания.</p>
-								<p><a href="#" title="Производство">Производство ></a></p>
+								<p><a href="#" title="Производство">Производство &rsaquo;</a></p>
 							</div>
 					</div>
 				</div>
@@ -145,9 +145,9 @@
 								д.&nbsp;17,&nbsp;стр.&nbsp;1,&nbsp;оф.&nbsp;1107
 							</p>
 							<ul class="contacts">
-								<li>Тел:<a href="tel:+74959452254" title="+7 (495) 945-22-54"> +7 (495) 945-22-54</a></li>
-								<li>Тел/Факс:<a href="tel:+74959455484" title="+7 (495) 945-54-84"> +7 (495) 945-54-84</a></li>
-								<li>e-mail:<a href="mailto:tania@floressence.ru" title="Написать"> tania@floressence.ru</a></li>
+								<li>Тел: <a href="tel:+74959452254" title="+7 (495) 945-22-54"> +7 (495) 945-22-54</a></li>
+								<li>Тел/Факс: <a href="tel:+74959455484" title="+7 (495) 945-54-84"> +7 (495) 945-54-84</a></li>
+								<li>e-mail: <a href="mailto:tania@floressence.ru" title="Написать"> tania@floressence.ru</a></li>
 							</ul>
 						</div>
 					</div>
