--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
 			<div class="content">
 				<div class="video">
 					<video id="video" muted="muted" controls loop="loop" autoplay="autoplay" playsinline >
+						<source src="./img/lotus.webm" type="video/webm" />
 						<source src="https://www.floressence.fr/images/flo/Lotus.mp4" type="video/mp4" />
 						</video>
 				<div class="video_cover">
