--- a/index.html
+++ b/index.html
@@ -51,8 +51,7 @@
 
 			<div class="content">
 				<div class="video">
-					<video id="video" muted="muted" controls loop="loop" autoplay="autoplay" playsinline >
-						<source src="./img/lotus.webm" media="(max-width: 720px)" type="video/webm" />
+					<video muted="muted" controls loop="loop" autoplay="autoplay" playsinline >
 						<source src="https://www.floressence.fr/images/flo/Lotus.mp4" type="video/mp4" />
 						</video>
 				<div class="video_cover">
@@ -104,7 +103,7 @@
 									нашим 100%-ным составам NAT и составу нераздражающих
 									парфюмерных композиций LIGHT 26, таким образом избегая
 									для потребителей маркировку аллергенных ингредиентов.</p>
-								<p><a href="#" title="Наш опыт">Наш опыт &rsaquo;</a></p>
+								<p><a href="#" title="Наш опыт">Наш опыт</a></p>
 							</div>
 					</div>
 				</div>
@@ -117,7 +116,7 @@
 									адаптированные к вашим ожиданиям, от килограмма до
 									нескольких тонн. Качество нашей продукции соответствует
 									строгому процессу отслеживания.</p>
-								<p><a href="#" title="Производство">Производство &rsaquo;</a></p>
+								<p><a href="#" title="Производство">Производство</a></p>
 							</div>
 					</div>
 				</div>
