--- a/index.html
+++ b/index.html
@@ -51,8 +51,9 @@
 
 			<div class="content">
 				<div class="video">
-					<video muted="muted" controls loop="loop" autoplay="autoplay" playsinline >
-						<source src="https://www.floressence.fr/images/flo/Lotus.mp4" type="video/mp4" />
+					<span></span>
+					<video muted="muted" loop="loop" preload="auto" playsinline >
+						<source src="mp4/lotus.mp4" type="video/mp4" />
 						</video>
 				<div class="video_cover">
 					<div>
