--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 			<div class="content">
 				<div class="video">
 					<span></span>
-					<video muted="muted" loop="loop" preload="auto" playsinline >
+					<video muted="muted" loop="loop" playsinline >
 						<source src="mp4/lotus.mp4" type="video/mp4" />
 						</video>
 				<div class="video_cover">
