--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
 
 			<footer>
 				<div>
-					<div class="down_level"></div>
+					<div class="preview down_level"></div>
 				</div>
 				<div>
 					<div class="footer_wrapper">
