--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 		<link rel="stylesheet" href="css/content.css" />
 		<link rel="stylesheet" href="css/footer.css" />
 		<script defer src="js/jquery.js"></script>
-		<script defer src="js/common.js"></script>
+		<script defer src="js/common.js?200320192100"></script>
 		<title>Floressence</title>
 	</head>
 
