--- a/404.html
+++ b/404.html
@@ -59,7 +59,10 @@
 
 
 			<footer>
-				<!-- <div>
+				<div>
+					<div class="preview down_level"></div>
+				</div>
+				<div>
 					<div class="footer_wrapper">
 						<div>
 							<h3>Floressence</h3>
@@ -74,7 +77,7 @@
 							</ul>
 						</div>
 					</div>
-				</div> -->
+				</div>
 				<div>
 					<div class="copyright">
 						<p>2019 &copy; FLORESSENCE. Все права защищены.
