--- a/404.html
+++ b/404.html
@@ -9,7 +9,7 @@
 		<link rel="stylesheet" href="css/style.css" />
 		<link rel="stylesheet" href="css/nav.css?210320192100" />
 		<link rel="stylesheet" href="css/header.css?210320192100" />
-		<link rel="stylesheet" href="css/404.css" />
+		<link rel="stylesheet" href="css/404.css?230320192100" />
 		<link rel="stylesheet" href="css/content.css" />
 		<link rel="stylesheet" href="css/footer.css" />
 		<script defer src="js/jquery.js"></script>
