--- a/404.html
+++ b/404.html
@@ -45,8 +45,14 @@
 			</header>
 			<div class="content">
 				<div class="err_page">
-					<h1>404</h1>
+					<h1>404. История компании</h1>
+					<h1 style="text-transform: uppercase">Синхрофазотрон</h1>
+					<h2>Еще один интригующий заголовок</h2>
 					<h3>Не удается найти веб-страницу или документ.</h3>
+					<p>Новое поколение оборудования с высокоточными роботами
+						позволяет разрабатывать и производить ароматизаторы,
+						адаптированные к вашим ожиданиям, от килограмма до нескольких тонн.
+						Качество нашей продукции соответствует строгому процессу отслеживания.</p>
 					<p>Возможные причины, по которым это произошло:</p>
 					<ul>
 						<li>страница временно недоступна</li>
