--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 		<link rel="stylesheet" href="css/style.css" />
 		<link rel="stylesheet" href="css/nav.css?230320192100" />
 		<link rel="stylesheet" href="css/header.css?230320192100" />
+		<link rel="stylesheet" href="css/video.css" />
+		<link rel="stylesheet" href="css/base.css?230320192100" />
 		<link rel="stylesheet" href="css/content.css" />
 		<link rel="stylesheet" href="css/footer.css" />
 		<script defer src="js/jquery.js"></script>
@@ -20,7 +22,7 @@
 		<div class="container">
 			<nav>
 				<ul>
-					<li><span class="selected">О компании</span></li>
+					<li><a href="/company.html" title="О компании">О компании</a></li>
 					<li><a href="#" title="Продукция">Продукция</a></li>
 					<li><a href="#" title="Качество">Качество</a></li>
 					<li><a href="#" title="Разработки">Разработки</a></li>
@@ -42,7 +44,7 @@
 					</ul>
 				</div>
 			</header>
-			<div class="content">
+			<article>
 				<div class="video">
 					<span></span>
 					<video muted="muted" loop="loop" playsinline >
@@ -58,73 +60,71 @@
 				</div>
 
 				</div>
-
 				<div class="prod_types">
-					<ul>
-						<li>
-							<a href="#" title="">
-								<span>Парфюм</span>
-								<img src="./img/parfum.jpg" alt="Парфюмерия"/>
-							</a>
-						</li>
-						<li>
-							<a href="#" title="">
-								<span>Косметика</span>
-								<img src="./img/cosmetique.jpg" alt="Косметика"/>
-							</a>
-						</li>
-						<li>
-							<a href="#" title="">
-								<span>Гигиена</span>
-								<img src="./img/hygiene.jpg" alt="Гигиена"/>
-							</a>
-						</li>
-						<li>
-							<a href="#" title="">
-								<span>Дом</span>
-								<img src="./img/habitat.jpg" alt="Бытовая химия"/>
-							</a>
-						</li>
-					</ul>
-				</div>
+						<ul>
+							<li>
+								<a href="#" title="">
+									<span>Парфюм</span>
+									<img src="./img/parfum.jpg" alt="Парфюмерия"/>
+								</a>
+							</li>
+							<li>
+								<a href="#" title="">
+									<span>Косметика</span>
+									<img src="./img/cosmetique.jpg" alt="Косметика"/>
+								</a>
+							</li>
+							<li>
+								<a href="#" title="">
+									<span>Гигиена</span>
+									<img src="./img/hygiene.jpg" alt="Гигиена"/>
+								</a>
+							</li>
+							<li>
+								<a href="#" title="">
+									<span>Дом</span>
+									<img src="./img/habitat.jpg" alt="Бытовая химия"/>
+								</a>
+							</li>
+						</ul>
+					</div>
 
-				<div class="preview expertise">
-					<div class="preview_wrap">
-							<div>
-								<h2>Признанная техника, связанная с качеством материалов</h2>
-								<p>Компания опирается на опыт технического и креативного
-									развития, особенно в области натуральности, благодаря
-									нашим 100%-ным составам NAT и составу нераздражающих
-									парфюмерных композиций LIGHT 26, таким образом избегая
-									для потребителей маркировку аллергенных ингредиентов.</p>
-								<p><a href="#" title="Наш опыт">Наш опыт</a></p>
-							</div>
+					<div class="preview expertise">
+						<div class="preview_wrap">
+								<div>
+									<h3>Признанная техника, связанная с качеством материалов</h3>
+									<p class="main">Компания опирается на опыт технического и креативного
+										развития, особенно в области натуральности, благодаря
+										нашим 100%-ным составам NAT и составу нераздражающих
+										парфюмерных композиций LIGHT 26, таким образом избегая
+										для потребителей маркировку аллергенных ингредиентов.</p>
+									<p class="main"><a href="#" title="Наш опыт">Наш опыт</a></p>
+								</div>
+						</div>
 					</div>
-				</div>
-				<div class="preview production">
-					<div class="preview_wrap">
-							<div>
-								<h2>Техника, эффективность, производительность</h2>
-								<p>Новое поколение оборудования с высокоточными роботами
-									позволяет разрабатывать и производить ароматизаторы,
-									адаптированные к вашим ожиданиям, от килограмма до
-									нескольких тонн. Качество нашей продукции соответствует
-									строгому процессу отслеживания.</p>
-								<p><a href="#" title="Производство">Производство</a></p>
-							</div>
+					<div class="preview production">
+						<div class="preview_wrap">
+								<div>
+									<h3>Техника, эффективность, производительность</h3>
+									<p class="main">Новое поколение оборудования с высокоточными роботами
+										позволяет разрабатывать и производить ароматизаторы,
+										адаптированные к вашим ожиданиям, от килограмма до
+										нескольких тонн. Качество нашей продукции соответствует
+										строгому процессу отслеживания.</p>
+									<p class="main"><a href="#" title="Производство">Производство</a></p>
+								</div>
+						</div>
 					</div>
-				</div>
-				<div class="text">
-					<div class="text_container">
-						<p>Творчество и компетентность наших команд находятся на службе
-							у обонятельных желаний наших клиентов. Около пятидесяти профессионалов работают над
-							проектами парфюмерных композиций
-							для анализа, разработки и доставки оригинальных ароматов по всему
-							миру.</p>
+					<div class="text">
+						<div class="text_container">
+							<p>Творчество и компетентность наших команд находятся на службе
+								у обонятельных желаний наших клиентов. Около пятидесяти профессионалов работают над
+								проектами парфюмерных композиций
+								для анализа, разработки и доставки оригинальных ароматов по всему
+								миру.</p>
+						</div>
 					</div>
-				</div>
-			</div>
-
+			</article>
 
 			<footer>
 				<div>
