--- a/404.html
+++ b/404.html
@@ -9,7 +9,7 @@
 		<link rel="stylesheet" href="css/style.css" />
 		<link rel="stylesheet" href="css/nav.css?210320192100" />
 		<link rel="stylesheet" href="css/header.css?210320192100" />
-		<link rel="stylesheet" href="css/404.css?230320192100" />
+		<link rel="stylesheet" href="css/base.css?230320192100" />
 		<link rel="stylesheet" href="css/content.css" />
 		<link rel="stylesheet" href="css/footer.css" />
 		<script defer src="js/jquery.js"></script>
@@ -43,12 +43,11 @@
 					</ul>
 				</div>
 			</header>
-			<div class="content">
-				<div class="err_page">
+			<article>
+				<div class="content">
 					<h1>404. История компании</h1>
-					<h1 style="text-transform: uppercase">Синхрофазотрон</h1>
-					<h2>Еще один интригующий заголовок</h2>
-					<h3>Не удается найти веб-страницу или документ.</h3>
+					<h3>Еще один интригующий заголовок</h3>
+					<h2>Не удается найти веб-страницу или документ.</h2>
 					<p>Новое поколение оборудования с высокоточными роботами
 						позволяет разрабатывать и производить ароматизаторы,
 						адаптированные к вашим ожиданиям, от килограмма до нескольких тонн.
@@ -61,8 +60,7 @@
 						<li>внезапно пропал Интернет</li>
 					</ul>
 				</div>
-			</div>
-
+			</article>
 
 			<footer>
 				<div>
