--- a/company.html
+++ b/company.html
@@ -49,6 +49,22 @@
 			</header>
 			<article>
 				<div class="video">
+					<span></span>
+					<video muted="muted" loop="loop" playsinline >
+						<source src="mp4/epices.mp4" type="video/mp4" />
+						</video>
+				<div class="video_cover">
+					<div>
+						<p>Floressence использует свой опыт, основанный на
+							 3 фундаментальных принципах: знания, креативность
+							 и надежность - с опытом и ноу-хау в области парфюмерных
+							 композиций, признанными более 30 лет благодаря
+							 талантливой команде создателей ароматов и инициативной
+							 группе оценки и маркетинга, В целом это гарантирует постоянное
+							 качество и оперативность в соответствии с потребностями каждого
+							 клиента.</p>
+					</div>
+				</div>
 				</div>
 
 				<div class="content">
